--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "fp-ts": "2.0.2",
+    "got": "9.6.0",
+    "io-ts": "2.0.0",
+    "express": "^4.16.1",
     "next": "latest",
+    "prom-client": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.43",
-    "@types/react": "^18.0.12",
+    "@types/node": "17.0.45",
+    "@types/react": "18.0.24",
     "@types/react-dom": "^18.0.5",
-    "typescript": "^4.7.3"
+    "typescript": "4.8.4"
   }
 }
