--- a/nextjs-app-kube.yaml
+++ b/nextjs-app-kube.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: nextjs-hello-world-app
-        image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
+        image: zhandosusen/nextjs-hello-world-app:latest
         ports:
-        - containerPort: 8080
+        - containerPort: 3000
